# tiss

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md
backend/: Cargo.toml
backend/src/: greetd.rs  logging.rs  main.rs  protocol.rs
config/: Cargo.toml
config/src/: lib.rs
docs/: APPEARANCE.md  CORE_HARDENING.md  ENV.md  PAM.md  THEME_AUTHORING.md  WHY_NOT_SDDM.md  greetd-config.toml.example  ii-greetd-config.toml.example  run.md  tiss-greetd-config.toml.example
launcher/: Cargo.toml
launcher/src/: appearance.rs  main.rs
packaging/arch/: PKGBUILD  PKGBUILD.stub  ii-greetd-qml.install  tiss-greetd-qml.install
protocol/: README.md
scripts/: ii-greetd-launcher  tiss-greetd-launcher
themes/lockscreen-vibe/: Main.qml
ui/: CMakeLists.txt
ui/qml/: Main.qml
ui/qml/TissCompat/: AuthCard.qml  Background.qml  Clock.qml  Scene.qml  SceneHost.qml  StatusBanner.qml  Token.qml  qmldir
ui/src/: BackendProcess.cpp  BackendProcess.h  main.cpp
