[package]
name = "tiss-greetd-launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tiss-greetd-launcher"
path = "src/main.rs"

[[bin]]
name = "tiss-greetd-appearance"
path = "src/appearance.rs"

[dependencies]
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
tiss-greetd-config = { path = "../config" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
