cmake_minimum_required(VERSION 3.21)

project(ii-greetd-ui LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Qml Quick QuickControls2)

qt_add_executable(ii-greetd-ui
    src/main.cpp
    src/BackendProcess.cpp
    src/BackendProcess.h
)

qt_add_qml_module(ii-greetd-ui
    URI IIGreetd
    VERSION 1.0
    QML_FILES
        qml/Main.qml
)

target_link_libraries(ii-greetd-ui
    PRIVATE
        Qt6::Core
        Qt6::Gui
        Qt6::Qml
        Qt6::Quick
        Qt6::QuickControls2
)
